# options-hedge

./: .buildinfo  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LP.py  README.md  WRDS_QUICK_START.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  notebook-ci.yml
_sources/source/: hello_world.md  index.md  installation.md  motivation.md
data/: README.md
docs/: BUGFIXES.md  DATA_STORAGE_STRATEGY.md  FIXED_FLOOR_LP_INTEGRATION.md  LP_FORMULATIONS.md  LP_FORMULATION_ANALYSIS.md  MULTI_EXPIRY_LP.md  WRDS_ACCESS_CHECKLIST.md  WRDS_IMPLEMENTATION_SUMMARY.md  WRDS_INTEGRATION_PLAN.md  WRDS_SETUP.md  _config.yml  _toc.yml  american_exercise_guide.md  references.bib  simulate_portfolio.ipynb
docs/source/: contributing.md  index.md  installation.md  motivation.md  options_primer.md
notebooks/: debug_quarterly_strategy.py  simulate_portfolio.ipynb  vix_floor_optimization.ipynb
scripts/: check_notebook_executed.py  decrypt_wrds_data.py  download_release_data.py  inject_kernel_env.py  reencrypt_wrds_data.py  test_wrds_key.py
source/: contributing.html  hello_world.html  index.html  installation.html  motivation.html  options_primer.html
src/: __init__.py  hello_world.py
src/options_hedge/: __init__.py  american_exercise.py  analyzer.py  fixed_floor_lp.py  lp_strategies.py  market.py  option.py  option_pricer.py  options_hedge.py  options_instruments.py  portfolio.py  simulate_portfolio.ipynb  simulation.py  strategies.py  vix_floor_lp.py  wrds_data.py
tests/: conftest.py  test_american_exercise.py  test_analyzer.py  test_fixed_floor_lp.py  test_hello_world.py  test_market.py  test_option.py  test_option_exercise.py  test_option_pricer.py  test_options_hedge.py  test_portfolio.py  test_simulation.py  test_simulation_modules.py  test_strategies.py  test_vix_ladder_lp.py  test_vix_ladder_strategy.py  test_wrds_data.py
