[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "options-hedge"
version = "0.1.0"
description = "Portfolio insurance optimization for retirees using options"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "gurobipy==12.0.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.284",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.3.0"
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "seaborn>=0.12.0"
]
docs = [
    # Pin versions for stable Jupyter Book build (avoid 2.x breaking changes)
    "jupyter-book==1.0.3",
    "sphinx==5.3.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "quantecon-book-theme>=0.7.0",
    "sphinx-proof>=0.1.3",
    "sphinxcontrib-bibtex>=2.5.0"
]
all = [
    "options-hedge[dev]",
    "options-hedge[jupyter]",
    "options-hedge[docs]"
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
