[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/options_hedge/_version.py"

[project]
name = "options-hedge"
description = "Portfolio insurance optimization for retirees using options"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Akhil Karra" },
    { name = "Zoe Xu" },
    { name = "Vivaan Shroff" },
    { name = "Wendy Wang" }
]
dynamic = ["version"]
dependencies = [
    "gurobipy==12.0.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas-stubs>=2.2.2.240807",
    "yfinance>=0.2.0", # Fallback market data when use_wrds=False
    "cryptography>=41.0.0", # For WRDS data encryption/decryption
    "python-dotenv>=1.0.0",  # For .env file support in notebooks
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.284",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.3.0"
]
wrds = [
    "wrds>=3.1.0",  # WRDS API client (optional, only for data download)
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "seaborn>=0.12.0"
]
docs = [
    # Pin versions for stable Jupyter Book build (avoid 2.x breaking changes)
    "jupyter-book==1.0.3",
    "sphinx==5.3.0",
    "sphinx-autodoc-typehints>=1.12.0",
    "quantecon-book-theme>=0.7.0",
    "sphinx-proof>=0.1.3",
    "sphinxcontrib-bibtex>=2.5.0"
]
all = [
    "options-hedge[dev]",
    "options-hedge[jupyter]",
    "options-hedge[docs]"
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"src/options_hedge/vix_floor_lp.py" = ["C901"]  # LP solver is complex by nature
"src/options_hedge/strategies.py" = ["C901"]  # Strategy logic is complex
"src/options_hedge/_version.py" = ["I001"]  # Auto-generated by setuptools_scm
"notebooks/**/*.py" = ["C901", "B007", "E501"]  # Debug scripts can be verbose
"notebooks/**/*.ipynb" = ["E402", "E501"]  # Notebooks have different patterns
"docs/**/*.ipynb" = ["E402", "E501"]  # Documentation notebooks

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*", "notebooks.*"]
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
